[package]
name = "shot_log"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
argon2rs = "*"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
# diesel = { version = "1.3.0", features = ["postgres", "uuid", "chrono", "r2d2", "serde_json"] }
dotenv = "0.9"
env_logger = "0.3"
handlebars = "1.1"
log = "0.3"
r2d2 = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
