[package]
name = "shot_log"
version = "0.1.0"
authors = ["Steve Loveless <steve.loveless@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-files = "0.2"
actix-rt = "1.1"
actix-session = "0.3"
actix-web = "2.0"
argon2rs = "*"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.1"
handlebars = "3.4"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
