[package]
name = "shot_log"
version = "0.1.0"
authors = ["Steve Loveless <steve@agrian.com>"]

[dependencies]
argon2rs = "*"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenv = "0.9"
env_logger = "0.3"
log = "0.3"
r2d2-diesel = "*"
r2d2 = "*"
rocket = "0.4.7"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "json", "uuid"]
